# giffy

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/config/: env.ts
backend/src/controllers/: claimController.ts  conditionController.ts  contributeController.ts  giftController.ts  onrampController.ts
backend/src/db/: mongoose.ts
backend/src/jobs/: poolIndexerCron.ts  reconciliationCron.ts  refundCron.ts
backend/src/middleware/: errorHandler.ts  rateLimit.ts  requestLogger.ts  validateRequest.ts
backend/src/models/: ClaimEvent.ts  Gift.ts  PoolLeaf.ts  PoolSyncState.ts  Sep24Session.ts
backend/src/routes/: claim.ts  condition.ts  contribute.ts  gifts.ts  index.ts  onramp.ts  pool.ts
backend/src/services/: POOL_INDEXER.md  claimService.ts  conditionService.ts  contributeService.ts  giftService.ts  onrampService.ts  poolIndexerService.ts  poolService.ts  reconciliationService.ts  refundService.ts
backend/src/utils/: claimToken.ts  errors.ts  logger.ts  qrPayload.ts
backend/src/validation/: conditionSchemas.ts  contributeSchemas.ts  giftSchemas.ts  onrampSchemas.ts
backend/test/: answerHash.test.ts  claimToken.test.ts  errorHandler.test.ts  validation.test.ts
chain/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
chain/src/: accounts.ts  assets.ts  config.ts  errors.ts  giftEscrow.ts  horizonClient.ts  index.ts  sep1.ts  sep10.ts  sep24.ts  shieldedPool.ts  sorobanClient.ts  trustline.ts  types.ts
chain/test/: accounts.integration.test.ts  assets.test.ts  errors.test.ts  fixtures.ts  giftEscrow.test.ts  helpers.ts  sep1.integration.test.ts  sep10.integration.test.ts  sep10.test.ts  sep24.integration.test.ts  sep24.test.ts  setup.ts  trustline.integration.test.ts  trustline.test.ts
contracts/: Cargo.toml  README.md
contracts/gift-escrow/: Cargo.toml
contracts/gift-escrow/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/groth16-verifier/: Cargo.toml  README.md
contracts/groth16-verifier/src/: lib.rs  test.rs
contracts/shielded-pool/: Cargo.toml  README.md
contracts/shielded-pool/src/: lib.rs  poseidon.rs  test.rs
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/zk/: vk.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/claim/[token]/: page.tsx
frontend/src/app/claim/sealed/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/gift/[id]/contribute/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: ClaimCountdown.tsx  ConditionPicker.tsx  ContributeForm.tsx  ContributionToggle.tsx  GroupGiftContributors.tsx  Navbar.tsx  NetworkGuard.tsx  OnrampModal.tsx  QrCodeCard.tsx  SealAmountToggle.tsx  StatusBadge.tsx  StepGateForm.tsx  StepUnlockTracker.tsx  ThemePicker.tsx  Toast.tsx  TransactionErrorToast.tsx  TriviaAnswerPrompt.tsx  TriviaQuestionForm.tsx  TrustlinePrompt.tsx  WalletConnectButton.tsx
frontend/src/components/ui/: GlassButton.tsx  GlassCard.tsx  GlassInput.tsx
frontend/src/components/wallet/: stellar-wallet-panel.tsx
frontend/src/hooks/: use-stellar-wallet.ts  useClaim.ts  useCondition.ts  useContribute.ts  useFreighter.tsx  useGift.ts  useOnramp.ts  useSealedClaim.ts  useSealedDeposit.ts
frontend/src/lib/: apiClient.ts  assets.ts  formatters.ts  merkleTree.ts  network.ts  poolClient.ts  shieldedNote.ts  stellar-sdk.ts  stellar-wallet.ts  stellarAddress.ts  trustline.ts  zkProver.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
frontend/src/wasm/zkprover/: package.json  zk_prover_wasm.d.ts  zk_prover_wasm.js  zk_prover_wasm_bg.wasm  zk_prover_wasm_bg.wasm.d.ts
zk-circuits/: Cargo.toml  README.md
zk-circuits/src/: lib.rs  poseidon2.rs
zk-circuits/tests/: withdraw.rs
zk-prover-wasm/: .gitignore  Cargo.toml  README.md
zk-prover-wasm/src/: lib.rs  test.rs
