[workspace]
resolver = "2"
members = [
    "gift-escrow",
    "groth16-verifier",
    "shielded-pool",
]

[workspace.package]
edition = "2021"

# Centralised lint policy so `cargo clippy -- -D warnings` stays green in CI
# without per-line #[allow] noise. These are non-behavioural allowances:
#   - too_many_arguments: contract entrypoints legitimately take many params.
#   - deprecated: soroban-sdk 27 deprecates Events::publish in favour of the
#     #[contractevent] macro; migrating is tracked separately and does not
#     change the already-deployed wasm.
[workspace.lints.rust]
deprecated = "allow"

[workspace.lints.clippy]
too_many_arguments = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
len_zero = "allow"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
