[package]
name = "zk-prover-wasm"
version = "0.1.0"
edition = "2021"

# Browser-side prover for ZK-sealed gift withdrawals. Wraps the `zk-circuits`
# withdraw circuit with wasm-bindgen so a Groth16 proof can be generated
# client-side (the note secret never leaves the browser). This crate's job in the
# frontend-integration phase is to answer the make-or-break UX question: proving
# key size + in-browser proving time. See README.md.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zk-circuits = { path = "../zk-circuits" }
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
# Native measurement harness (no browser needed to get first numbers).
ark-relations = "0.4.0"
