[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2021"

# Phase 0 spike for confidential (ZK-sealed) gift amounts. This crate exists to
# answer one make-or-break question: can a Soroban contract verify a Groth16
# proof (over BLS12-381, via the Protocol-22 host functions) within the network's
# per-transaction instruction/memory budget? See README.md in this directory.

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "27.0.0"

[dev-dependencies]
soroban-sdk = { version = "27.0.0", features = ["testutils"] }

# Native-only (dev) deps: used inside tests to generate a *real* Groth16 proof
# with a trusted setup, then re-serialize it into Soroban's byte format. These
# never enter the wasm — dev-dependencies only compile for the native test build,
# so leaving std enabled here costs the on-chain size nothing.
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-relations = "0.4.0"

[lints]
workspace = true
